--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     margin: 50px;
-    background-image: url('background.jpg');
+    background-image: url('./background.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
@@ -70,5 +70,6 @@ img{
     bottom:300px;
     left:35px;
 }
+
 
 
